--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.11MB/s(Youtube:不良林), server: vfly8.win, port: 443, type: vmess, uuid: 8fc94fe3-cfb1-4bc7-e43b-26d4d1e5f4cd, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly8.win}}
-  - {name: 🇯🇵 日本-505.4KB/s(Youtube:不良林), server: 185.172.113.106, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇯🇵 日本-368.5KB/s(Youtube:不良林), server: 185.172.113.101, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-1.41MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-682.6KB/s(Youtube:不良林), server: 185.172.113.101, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.42MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-242.2KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-963.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.77MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.24MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -66,17 +66,18 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -87,11 +88,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -103,11 +104,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
@@ -128,11 +129,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-505.4KB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.41MB/s(Youtube:不良林)
-      - 🇯🇵 日本-682.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.75MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.42MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活3天)香港-3.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-242.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.24MB/s(Youtube:不良林)
