--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 台湾-4.97MB/s(Youtube:不良林), server: tw.suntory.lol, port: 38511, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.16MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.21MB/s(Youtube:不良林), server: gb.v2yyds.com, port: 32913, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: gb.v2yyds.com, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.94MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林), server: v001.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /a11-dCeBnloadPy, ws-headers: {Host: v001.v2dns.bar}}
+  - {name: 🇮🇳 印度-269.2KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-963.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.77MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.41MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.70MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
+  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-3.28MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-4.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.55MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇬🇧 英国-2.85MB/s(Youtube:不良林), server: jgwld4.gaox.ml, port: 443, type: trojan, password: 58d32c66-43b1-4561-9951-d87c9123774e, sni: jgwld4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 台湾-4.97MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.21MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.94MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-4.14MB/s(Youtube:不良林)
+      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
       - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.77MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.41MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-3.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
