--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇮🇳 印度-269.2KB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.52MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-963.4KB/s(Youtube:不良林), server: 51.81.223.32, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.70MB/s(Youtube:不良林), server: 116.63.103.11, port: 45758, type: vmess, uuid: 311e647a-c835-492a-b685-b159c0c78683, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 116.63.103.11}}
-  - {name: 🇯🇵 日本-2.24MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.30MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-178.6KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-4.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
   - {name: 🇨🇳 中国-5.55MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8030, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇮🇳 印度-269.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.52MB/s(Youtube:不良林)
-      - 🇺🇸 美国-963.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.70MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.24MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.30MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
       - 🇨🇳 中国-5.55MB/s(Youtube:不良林)
