--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,10 +6,10 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇸🇬 新加坡-178.6KB/s(Youtube:不良林), server: trojan-ctb-sg01.globalssh.xyz, port: 443, type: trojan, password: !<str> 123456, sni: trojan-ctb-sg01.globalssh.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.90MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.63MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.35MB/s(Youtube:不良林), server: ftp.cn.debian.cdnet.in, port: 8040, type: ss, cipher: aes-128-gcm, password: 18269676-71ae-476d-b6d3-26ca391424b9}
+  - {name: 🇨🇳 台湾-7.34MB/s(Youtube:不良林), server: tw.suntory.lol, port: 38513, type: trojan, password: 0896373c-7cd9-4221-b50d-9634990d6751, sni: tw.suntory.lol, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.67MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.06MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.46MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-3.56MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-4.46MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
@@ -22,10 +22,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -37,10 +37,10 @@ proxy-groups:
     interval: 300
     proxies:
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -53,10 +53,10 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -66,6 +66,7 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -73,10 +74,10 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -88,10 +89,10 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -104,10 +105,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
@@ -129,10 +130,10 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇸🇬 新加坡-178.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.90MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.63MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.35MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-7.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.46MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-3.56MB/s(Youtube:不良林)
       - 🇰🇷 韩国-4.46MB/s(Youtube:不良林)
